--- a/core/templates/core/categorias-produtos.html
+++ b/core/templates/core/categorias-produtos.html
@@ -8,9 +8,8 @@
 <body>
     <main>
         <div id="box">
-            {% for categoria in categorias %}
-                <p>{{ categoria.nome }}</p>
-                <a href="{% url 'categorias-produtos' categoria.nome %}">Produtos</a>
+            {% for produto in produtos %}
+                {{ produto.nome }}
             {% endfor %}
         </div>
     </main>
