--- a/core/templates/core/details.html
+++ b/core/templates/core/details.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'core/css/base.css' %}">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +9,23 @@
 </head>
 <body>
     <main>
-        <div>
-            {{ produto.nome }}
-            {{ produto.codigo }}
-            {{ produto.descricao }}
-            {{ produto.preco }}
-            {{ produto.quantidade }}
+        <div class="details-container">
+            <h1>Detalhes do produto {{produto.id}}</h1>
+            <p>Nome: {{ produto.nome }}</p>
+            <p>Código: {{ produto.codigo }}</p>
+            <p>Descrição: {{ produto.descricao }}</p>
+            <p>Preço: R$ {{ produto.preco }}</p>
+            <p>Quantidade: {{ produto.quantidade }}</p>
+            <p>Fornecedor: {{ produto.fornecedor }}</p>
+            <p>Categorias: 
+                {% for categoria in categorias %}
+                    {{ categoria.nome }}{% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            </p>
+        </div>
+        <div class="nav-buttons">
+            <button><a href="{% url 'index' %}">Inicial</a></button>
+            <button><a href="{% url 'categorias' %}">Categorias</a></button>
         </div>
     </main>
 </body>
