--- a/core/templates/core/fornecedores.html
+++ b/core/templates/core/fornecedores.html
@@ -1,3 +1,5 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'core/css/base.css' %}">
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,10 +10,17 @@
 <body>
     <main>
         <div id="box">
+            <h1>Fornecedores</h1>
             {% for fornecedor in fornecedores %}
-                <p>{{ fornecedor.nome }}</p>
-                <p>{{ fornecedor.cnpj }}</p>
+                <div id="fornecedor-box">
+                    <p>{{ fornecedor.nome }}</p>
+                    <p>{{ fornecedor.cnpj }}</p>
+                </div>
             {% endfor %}
+        </div>
+        <div class="nav-buttons">
+            <button><a href="{% url 'index' %}">Inicial</a></button>
+            <button><a href="{% url 'categorias' %}">Categorias</a></button>
         </div>
     </main>
 </body>
