--- a/core/templates/core/details.html
+++ b/core/templates/core/details.html
@@ -1,7 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +18,10 @@
             <p>Quantidade: {{ produto.quantidade }}</p>
             <p>Fornecedor: {{ produto.fornecedor }}</p>
             <p>Categorias: 
-                {% for categoria in categorias %}
+                {% for categoria in produto.categorias.all %}
                     {{ categoria.nome }}{% if not forloop.last %}, {% endif %}
+                {% empty %}
+                    Nenhuma categoria associada
                 {% endfor %}
             </p>
         </div>
