--- a/core/static/core/css/base.css
+++ b/core/static/core/css/base.css
@@ -12,6 +12,12 @@ main {
     padding: 20px;
 }
 
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 #main-box, #box {
     background-color: #fff;
     border-radius: 8px;
@@ -33,6 +39,11 @@ main {
 .button-container {
     display: flex;
     gap: 10px;
+}
+
+#filter-button {
+    padding: 10px;
+    height: 40px;
 }
 
 button {
@@ -146,4 +157,8 @@ p {
 
 .form-group.has-error label {
     color: #dc3545;
+}
+
+#search-input {
+    border: none;
 }
