--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
+    <script src="https://kit.fontawesome.com/104c210297.js" crossorigin="anonymous"></script>
     {% block css %}
     {% endblock %}
 </head>
