refactor: agora usam o template base

--- a/core/templates/core/cadastrar_fornecedor.html
+++ b/core/templates/core/cadastrar_fornecedor.html
@@ -3,6 +3,7 @@
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'core/css/forms.css' %}">
+<title>Cadastrar Fornecedor</title>
 {% endblock %}
 
 {% block content %}
