--- a/core/templates/core/fornecedores.html
+++ b/core/templates/core/fornecedores.html
@@ -1,27 +1,22 @@
+{% extends 'core/base.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'core/css/base.css' %}">
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+{% block css %}
     <title>Fornecedores</title>
-</head>
-<body>
-    <main>
-        <div id="box">
-            <h1>Fornecedores</h1>
-            {% for fornecedor in fornecedores %}
-                <div id="fornecedor-box">
-                    <p>{{ fornecedor.nome }}</p>
-                    <p>{{ fornecedor.cnpj }}</p>
-                </div>
-            {% endfor %}
-        </div>
-        <div class="nav-buttons">
-            <button><a href="{% url 'index' %}">Inicial</a></button>
-            <button><a href="{% url 'categorias' %}">Categorias</a></button>
-        </div>
-    </main>
-</body>
-</html>
+{% endblock %}
+
+{% block content %}
+    <div id="box">
+        <h1>Fornecedores</h1>
+        {% for fornecedor in fornecedores %}
+            <div id="fornecedor-box">
+                <p>{{ fornecedor.nome }}</p>
+                <p>{{ fornecedor.cnpj }}</p>
+            </div>
+        {% endfor %}
+    </div>
+    <div class="nav-buttons">
+        <button><a href="{% url 'index' %}">Inicial</a></button>
+        <button><a href="{% url 'categorias' %}">Categorias</a></button>
+    </div>
+{% endblock %}
