--- a/core/templates/core/cadastrar_categoria.html
+++ b/core/templates/core/cadastrar_categoria.html
@@ -3,6 +3,7 @@
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'core/css/forms.css' %}">
+<title>Cadastrar Categoria</title>
 {% endblock %}
 
 {% block content %}
