--- a/core/templates/core/cadastrar_produto.html
+++ b/core/templates/core/cadastrar_produto.html
@@ -3,6 +3,7 @@
 
 {% block css %}
 <link rel="stylesheet" href="{% static 'core/css/forms.css' %}">
+<title>Cadastrar Produto</title>
 {% endblock %}
 
 {% block content %}
