--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,41 +1,44 @@
+{% extends 'core/base.html' %}
 {% load static %}
-<link rel="stylesheet" href="{% static 'core/css/base.css' %}">
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% load preserve_url %}
+
+{% block css %}
     <title>Inicial</title>
-</head>
-<body>
-    <main>
-        <div id="main-box">
+{% endblock %}
+
+{% block content %}
+    <div id="main-box">
+        <div class="main-header">
             <h1>Produtos</h1>
-            {% for produto in produtos %}
-                <div id="produto-box">
-                    <p>{{ produto }}</p>
-                    <div class="button-container">
-                        <button>
-                            <a href="{% url 'details' produto.id %}" style="text-decoration: none;">Detalhes</a>
-                        </button>
-                        <button>
-                            <a href="{% url 'deletar_produto' produto.id %}" style="text-decoration: none;">Deletar</a>
-                        </button>
-                    </div>
+            <form action="{% url 'resultado_pesquisa' %}" method="get">
+                <input name="q"  type="text" placeholder="Pesquisar produto" id="search-input">
+                <button id="filter-button" type="submit">Filtrar</button>
+            </form>
+        </div>
+        {% for produto in produtos %}
+            <div id="produto-box">
+                <p>{{ produto }}</p>
+                <div class="button-container">
+                    <button>
+                        <a href="{% url 'details' produto.id %}" style="text-decoration: none;">Detalhes</a>
+                    </button>
+                    <button>
+                        <a href="{% url 'deletar_produto' produto.id %}" style="text-decoration: none;">Deletar</a>
+                    </button>
                 </div>
-            {% empty %}
-                <p>Não há produtos cadastrados.</p>
-            {% endfor %}
-        </div>
-        <div class="nav-buttons">
-            <button><a href="{% url 'fornecedores' %}">Fornecedores</a></button>
-            <button><a href="{% url 'categorias' %}">Categorias</a></button>
-        </div>
-        <div class="nav-buttons">
-            <button><a href="{% url 'cadastrar_produto' %}">Cadastrar Produto</a></button>
-            <button><a href="{% url 'cadastrar_fornecedor' %}">Cadastrar Fornecedor</a></button>
-            <button><a href="{% url 'cadastrar_categoria' %}">Cadastrar Categoria</a></button>
-        </div>
-    </main>
-</body>
-</html>
+            </div>
+        {% empty %}
+            <p>Não há produtos cadastrados.</p>
+        {% endfor %}
+        
+    </div>
+    <div class="nav-buttons">
+        <button><a href="{% url 'fornecedores' %}">Fornecedores</a></button>
+        <button><a href="{% url 'categorias' %}">Categorias</a></button>
+    </div>
+    <div class="nav-buttons">
+        <button><a href="{% url 'cadastrar_produto' %}">Cadastrar Produto</a></button>
+        <button><a href="{% url 'cadastrar_fornecedor' %}">Cadastrar Fornecedor</a></button>
+        <button><a href="{% url 'cadastrar_categoria' %}">Cadastrar Categoria</a></button>
+    </div>
+{% endblock %}
