--- a/core/templates/core/cadastrar_produto.html
+++ b/core/templates/core/cadastrar_produto.html
@@ -9,7 +9,7 @@
 {% block content %}
 <div class="form-container">
     <h1>Cadastrar Produto</h1>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
         {% if messages %}
